--- a/LessonPlanOrganizer/LessonPlanOrganizer.csproj
+++ b/LessonPlanOrganizer/LessonPlanOrganizer.csproj
@@ -63,6 +63,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsFormsCalendar">
+      <HintPath>Dependency\WindowsFormsCalendar.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Control\DBControl.cs" />
