- main page UI almost complete.
git-svn-id: https://github.com/joshbaird/LessonPlanOrganizer/trunk@18 6a2c2425-dea3-90a6-7eab-ce57b7db7bff

--- a/LessonPlanOrganizer/LessonPlanOrganizer.csproj
+++ b/LessonPlanOrganizer/LessonPlanOrganizer.csproj
@@ -71,6 +71,10 @@
     <Compile Include="Control\DBControl.cs" />
     <Compile Include="Entity\LessonPlan.cs" />
     <Compile Include="Entity\LessonPlanYear.cs" />
+    <Compile Include="Entity\Subject.cs" />
+    <Compile Include="Control\LessonPlanYearControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="System.Windows.Forms.Calendar\Calendar.cs">
       <SubType>Component</SubType>
     </Compile>
