- started working with panels for the subjects, lessons, and lessonyear views. Added some events. Need to refactor all events to a static EventGenerator Class...

--- a/LessonPlanOrganizer/LessonPlanOrganizer.csproj
+++ b/LessonPlanOrganizer/LessonPlanOrganizer.csproj
@@ -73,6 +73,18 @@
     <Compile Include="Entity\LessonPlanYear.cs" />
     <Compile Include="Entity\Subject.cs" />
     <Compile Include="Control\LessonPlanYearControl.cs" />
+    <Compile Include="UI\lessonsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\lessonsView.Designer.cs">
+      <DependentUpon>lessonsView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\subjectsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\subjectsView.Designer.cs">
+      <DependentUpon>subjectsView.cs</DependentUpon>
+    </Compile>
     <Compile Include="System.Windows.Forms.Calendar\Calendar.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -146,6 +158,18 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entity\Report.cs" />
+    <Compile Include="UI\yearView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\yearView.Designer.cs">
+      <DependentUpon>yearView.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="UI\lessonsView.resx">
+      <DependentUpon>lessonsView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\subjectsView.resx">
+      <DependentUpon>subjectsView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\LessonUI.resx">
       <DependentUpon>LessonUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -170,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\SubjectUI.resx">
       <DependentUpon>SubjectUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\yearView.resx">
+      <DependentUpon>yearView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
