- added events for all Subject operations. add, remove, and delete all work. All subject views will be tied together. The newLessonYear may have to use a different control since we dont want it bound to the current control.

--- a/LessonPlanOrganizer/LessonPlanOrganizer.csproj
+++ b/LessonPlanOrganizer/LessonPlanOrganizer.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Entity\LessonPlanYear.cs" />
     <Compile Include="Entity\Subject.cs" />
     <Compile Include="Control\LessonPlanYearControl.cs" />
+    <Compile Include="EventsControl.cs" />
     <Compile Include="UI\lessonsView.cs">
       <SubType>UserControl</SubType>
     </Compile>
